--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -65,8 +65,7 @@
                 @Html.DisplayFor(modelItem => item.NguoiLH)
             </td>
               <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
+                @Html.DisplayFor(modelItem => item.EmailLH)
             
             <td>
                 <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem  </a> | 
