--- a/Areas/Product/Views/ViewProduct/Detail.cshtml
+++ b/Areas/Product/Views/ViewProduct/Detail.cshtml
@@ -22,7 +22,7 @@
             </li>
         }
         <li class="breadcrumb-item">
-                <a asp-action="Index" asp-route-categoryslug="@category.Slug">@category.Title</a>
+            <a asp-action="Index" asp-route-categoryslug="@category.Slug">@category.Title</a>
         </li>
     } 
   </ol>
@@ -37,7 +37,7 @@
         <p>
             <!-- Giá: <strong>@Model.Price</strong> -->
             @* <a asp-action="AddToCart" asp-route-productid="@Model.ProductID"  class="btn btn-danger">Đấu thầu</a> *@
-            <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-danger">Đấu Thầu</a>
+            <a asp-action="Index" asp-controller="/trangthongtin" asp-route-productid="@Model.ProductID"  class="btn btn-danger">Đấu Thầu</a>
         </p>
     </div>
     <div>
