--- a/Areas/Product/Views/ViewProduct/Index.cshtml
+++ b/Areas/Product/Views/ViewProduct/Index.cshtml
@@ -60,10 +60,10 @@ else
             </div>
             <div class="card-body">
                 <a class="card-link" asp-controller="ViewProduct" asp-action="Detail" asp-route-productslug="@product.Slug">
-                    Chi tiết
+                    Chi tiết a
                 </a>
                 @* <a asp-action="AddToCart" asp-route-productid="@product.ProductID" class="btn btn-primary ml-4">Đặt hàng</a> *@
-                 <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-primary ml-4">Đấu Thầu</a>
+                 <a asp-action="Index" asp-controller="/trangthongtin" asp-route-productid="@product.ProductID"  class="btn btn-primary ml-4">Đấu Thầu</a>
             </div>
         </div>
     }
