--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Delete1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Delete1.cshtml
@@ -20,10 +20,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DT)
         </dd>
-        @* <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EmailLH)
         </dt>
-        <dd class = "col-sm-10">
+        @*<dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
