--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -1,10 +1,12 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 
-@* @model IEnumerable<App.Models.ThongTinNhaThaus.ThongTinNhaThau> *@
+
 @model IEnumerable<App.Models.DKThaus.DKThau>
 
 @{
+    var products = ViewBag.products as IQueryable<App.Models.Product.ProductModel>;
+    var posts = ViewBag.posts as IQueryable<App.Models.Blog.Post>;
     ViewData["Title"] = "Danh sách nhà thầu";
     Layout =  "/Views/Shared/_LayoutAdmin.cshtml";
 }
@@ -41,12 +43,10 @@
                 @* @Html.DisplayNameFor(model => model.TenNhaThau) *@
                Email
             </th> 
+            @* <th>
+                Ngày
+            </th>  *@
             
-            
-           @* <th>
-                @Html.DisplayNameFor(model => model.Phone)
-            </th> 
-            <th></th>*@
         </tr>
     </thead>
     <tbody>
@@ -61,15 +61,20 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MaST)
             </td>
-             <td>
+            <td>
                 @Html.DisplayFor(modelItem => item.NguoiLH)
             </td>
-              <td>
-                @Html.DisplayFor(modelItem => item.EmailLH)
-            
             <td>
-                <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem  </a> | 
-                <a href="dsNhaThau/delete/@item.ID" class="btn btn-primary" >Xóa  </a>     
+                @Html.DisplayFor(modelItem => item.EmailLH)
+            </td>
+            @* <td>
+                @Html.DisplayFor(modeItem =>item.Ngay)
+            </td> *@
+            <td>
+                <a href="dsNhaThau/detail/@item.ID"   class="btn btn-primary" >Xem  </a> | 
+                <a href="dsNhaThau/delete/@item.ID" class="btn btn-primary" >Xóa  </a>   
+                @* <a asp-action="Index" asp-controller="/trangthongtin" asp-route-productid="@product.ProductID"  class="btn btn-primary ml-4">Đấu Thầu</a> *@
+              
             </td>
            
         </tr>
