--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -68,8 +68,8 @@
                     Chi tiết
                 </a>
                 @* <a asp-action="AddToCart" asp-area="Product"  asp-controller="ViewProduct" asp-route-productid="@product.ProductID" class="btn btn-primary ml-4">Đấu Thầu</a> *@
-                @* <a asp-action="Index" asp-controller="/form2"  class="btn btn-primary ml-4">Thông Tin Nhà Thầu</a> *@
-                <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-primary ml-4">Đấu Thầu</a>
+                @* <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-primary ml-4">Thông Tin Nhà Thầu</a> *@
+             <a asp-action="Index" asp-controller="/trangthongtin" asp-route-productid="@product.ProductID"  class="btn btn-primary ml-4">Đấu Thầu</a>
             </div>
         </div>
     }
