--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
@@ -1,7 +1,3 @@
-@using Microsoft.AspNetCore.Identity
-@using App.Models
-@inject SignInManager<AppUser> SignInManager
-@inject UserManager<AppUser> UserManager
 @{
     ViewData["Title"] = "Đấu Thầu";
     Layout =  "/Views/Shared/_Layout.cshtml";
@@ -27,6 +23,7 @@ $(function ()
     });  
 })  
 </script>
+
 <script type="text/javascript" src="/TSPD/082d638fd6ab200068afd070d0c9498d3735077bd154b5d710f1da71d0c0218eaa4a750574ff5251?type=17"></script>
 
     <!-- Meta -->
@@ -44,7 +41,6 @@ $(function ()
     <link href="/Content/tn3/tn3.css" rel="stylesheet">
     <link href="/Content/styles-box.css" rel="stylesheet">
     <link href="/Content/custom.css" rel="stylesheet">
-    <link href="styles/jquery-ui.css" rel="stylesheet" />
 
 
     <!-- Theme CSS -->
@@ -53,11 +49,8 @@ $(function ()
         <script src="/Scripts/html5shiv.js"></script>
         <script src="/Scripts/respond.min.js"></script>
     <![endif]-->
-    <script src="scripts/jquery-1.11.3.min.js"></script>  
-    <script src="scripts/jquery-ui.js"></script>  
 
 </head>
-
 
 <body class="home-page boxed">
     <style>
@@ -105,13 +98,12 @@ $(function ()
     <input data-val="true" data-val-date="The field Updated must be a date." data-val-required="The Updated field is required." id="Updated" name="Updated" type="hidden" value="24/08/2023 14:37:08" />
     <input data-val="true" data-val-number="The field Status must be a number." data-val-required="The Status field is required." id="Status" name="Status" type="hidden" value="2" />
     <br />
-    
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Tên dự toán mua sắm(*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="@(ViewBag.Product.Title ?? String.Empty)" name="Ten" readonly="readonly">
+                    <input class="form-control" type="text" value="@(ViewBag.Product.Title ?? String.Empty)" name="Ten">
                 </div>
             </div>
         </div>
@@ -119,7 +111,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Năm(*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="2023" name="Nam" readonly="readonly">
+                    <input class="form-control" type="text" value="2023" name="Nam">
                 </div>
             </div>
         </div>
@@ -129,7 +121,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Phân loại (*): </label>
                 <div class="col-md-6">
-                    <select id="PhanLoai" name="PhanLoai" class="form-control" readonly="readonly">
+                    <select id="PhanLoai" name="PhanLoai" class="form-control">
                             <option value="0">Chọn phân loại</option>
                         <option value="1" selected=&quot;selected&quot;>Hàng hóa thông thường</option>
                         <option value="2" >Máy móc,linh kiện</option>
@@ -145,7 +137,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Người liên hệ (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="@UserManager.GetUserName(User)"  name="NguoiLienHe" readonly="readonly">
+                    <input class="form-control" type="text" value=""  name="NguoiLH">
                 </div>
             </div>
         </div>
@@ -155,7 +147,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Điện thoại liên hệ (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="0908881212 "  name="DT" readonly="readonly">
+                    <input class="form-control" type="text" value=" "  name="DT">
                 </div>
             </div>
         </div>
@@ -163,7 +155,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Email liên hệ  (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="Nguyenvan@gmail.com"  name="Email" readonly="readonly">
+                    <input class="form-control" type="text" value=""  name="Email">
                 </div>
             </div>
         </div>
@@ -214,10 +206,9 @@ $(function ()
                     <span class="field-validation-valid" data-valmsg-for="DienThoaiLienHe" data-valmsg-replace="true"></span>
                 </div>
             </div>
-        </div>
-    </div>
+        </div> 
     <div class="col-md-12 col-xs-12">
-    <div class="col-md-6" style="padding-right: 10px;">
+        <div class="col-md-6" style="padding-right: 10px;">
         <div class="form-group">
             <label class="control-label col-md-6" for="NgayCapNhat" style="text-align:left;">Ngày (*): </label>
             <div class="col-md-6">
@@ -226,13 +217,14 @@ $(function ()
             </div>
         </div>
     </div>  
-</div>
+    </div>
+    </div>
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" for="EmailLienHe" style="text-align:left;">Email li&#234;n hệ (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="Email" name="EmailLH" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="Email" name="Email" type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="EmailLienHe" data-valmsg-replace="true"></span>
                 </div>
             </div>
@@ -241,39 +233,42 @@ $(function ()
             &nbsp;
         </div>
     </div>
-
+    @*Upload PDF*@
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File scan b&#225;o gi&#225;, c&#243; k&#253; t&#234;n, đ&#243;ng dấu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia" readonly="readonly" type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
 
                 </div>
             </div>
         </div>
-        <div class="col-md-6" style="padding-right:10px;">
+       <div class="col-md-6" style="padding-right:10px;">
+        <form enctype="multipart/form-data" action="/api/PdfUpload/upload" method="post">
             <div class="form-group">
-                <input type="file" id="fileUploadPdf" accept='application/pdf' class="form-control" />
+                <input type="file" name="pdfFile" accept="application/pdf" class="form-control" id="fileUploadPdf">
             </div>
-        </div>
+        </form>
     </div>
+    </div>
+    @*Upload XML*@
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
-                <label class="control-label col-md-6" for="BangBaoGia" style="text-align:left;">Bảng ch&#224;o gi&#225; của nh&#224; thầu (*): </label>
+                <label class="control-label col-md-6" for="FileBaoGia" style="text-align:left;">Bảng ch&#224;o gi&#225; của nh&#224; thầu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia" readonly="readonly" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="FileBaoGia" data-valmsg-replace="true"></span>
 
                 </div>
             </div>
         </div>
         <div class="col-md-2" style="padding-right:10px;">
-            @* <div class="form-group">
-                <button type="button" class="btn btn-primary btnBieuMauTaiXuong"><span class="glyphicon glyphicon-download">&nbsp;</span>Biểu mẫu tải xuống</button>
-            </div> *@
+            <div class="form-group">
+                <button type="" class="btn btn-primary btnBieuMauTaiXuong"><span class="glyphicon glyphicon-download">&nbsp;</span>Biểu mẫu tải xuống</button>
+            </div>
         </div>
         <div class="col-md-4" style="padding-right:10px;">
             <div class="form-group">
@@ -281,7 +276,8 @@ $(function ()
             </div>
         </div>
     </div>
-    <div class="col-md-12 col-xs-12">
+     @*Upload ZIP*@
+    @* <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileZipDinhKem" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip): </label>
@@ -297,7 +293,27 @@ $(function ()
                 <input type="file" id="fileUploadZip" accept="application/zip,application/x-zip,application/x-zip-compressed" class="form-control" />
             </div>
         </div>
+    </div> *@
+     <div class="col-md-12 col-xs-12">
+        <div class="col-md-6" style="padding-right:10px;">
+            <div class="form-group">
+                <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip):(*): </label>
+                <div class="col-md-6">
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="HSKhac" name="HSKhac" readonly="readonly" type="text" value="" />
+                    <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
+
+                </div>
+            </div>
+        </div>
+       <div class="col-md-6" style="padding-right:10px;">
+        <form enctype="multipart/form-data" action="/api/PdfUpload/upload" method="post">
+            <div class="form-group">
+                <input type="file" name="pdfFile" accept="application/pdf" class="form-control" id="fileUploadPdf">
+            </div>
+        </form>
     </div>
+    </div>
+    
     <div class="col-md-12 col-xs-12">
         <table class="table" id="FilesList" border="1">
 
@@ -455,9 +471,21 @@ $(function ()
             }(document, 'script', 'facebook-jssdk'));
         });
     </script>
+<script>
+    document.getElementById("fileUploadPdf").addEventListener("change", function () { //fileUpload
+        var fileInput = document.getElementById("fileUploadPdf");
+        var fileNameDisplay = document.getElementById("BangBaoGia");
+
+        if (fileInput.files.length > 0) {
+            fileNameDisplay.value = fileInput.files[0].name;
+        } else {
+            fileNameDisplay.value = "";
+        }
+    });
+</script>
 
 
-
+    
     
     <script type="text/javascript" src="/Content/Xlsx/xlsx.full.min.js"></script>
     <script src="/Scripts/jquery.validate.js"></script>
